@@ -1,9 +1,9 @@
 ;
 ; Script generated by the ASCOM Driver Installer Script Generator 6.0.0
 ; Generated by Quidne IT Ltd on 12/03/2017 (UTC)
-; Last Updated on 06/03/2021 (UTC)
+; Last Updated on 27/08/2022 (UTC)
 ;
-#define AppVersion = "2.0.6"
+#define AppVersion = "2.0.7"
 #define AppName = "Q-Astro FocusFilter"
 
 ;Used for Icon and Registration
@@ -25,7 +25,7 @@ AppPublisherURL=http://www.q-astro.com
 AppSupportURL=mailto:Support@Quidne-IT.com
 AppUpdatesURL=http://www.q-astro.com/
 VersionInfoVersion=1.5.0
-MinVersion=0,5.0.2195sp4
+MinVersion=0,6.0
 DefaultDirName="{cf}\ASCOM\{#AppName}"
 DisableDirPage=yes
 DisableProgramGroupPage=yes
