@@ -23,3 +23,4 @@ Date	    Who	Vers	Description
 			Change to focuser code to only accept relative focussing.
 21-09-2021  RvE 2.0.6	Fixed bug in the Filterwheel Arduino code where first filter was never be able to be selected in ASCOM.
 			Also fixed GUI for Setup to show first filter position is 1 and not 0.
+27-08-2022  RvE 2.0.7	Fixed bug to resolve exception errors when can not connect.
